delete some code so that flex properly aligns side navbar and main content divs in the correct grid layout

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,30 +15,44 @@
 
 .container {
   display: flex;
+  flex-direction: row;
   height: 100vh;
   width: 100vw;
 }
 .side-bar {
+  flex: 0;
   display: flex;
   flex-direction: column;
-  position: fixed;
-  height: 100vh;
-  width: 22vw;
+  // position: fixed;
+  // height: 100vh;
+  // width: 22vw;
   border: solid 1px;
+  h1 {
+    text-align: center;
+  }
+  ul li{
+    list-style-type: none;
+    margin: 10vh;
+  }
 }
-.notSidebar {
+.main {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-.unopened{
-  height: 15vh;
-  width:50vw;
-  border: solid 1px;
-}
+  // align-items: flex-start;
+  // width: 100%;
+  .banner {
+    flex: 1;
+  }
+  .unopened{
+    flex: 1;
+    // height: 15vh;
+    border: solid 1px;
+  }
 
-.opened {
-  display: none;
-  width: 50vw;
+  .opened {
+    flex: 1;
+    display: none;
+    // width: 80%;
+  }
 }
